Changelog
=========

1.2.1 (unreleased)
------------------

- Removed longly deprecated actionicons.xml [keul]
- Modern inclusion of referencebrowserwidget [keul]
- Restored tests on Plone 3.3 that were broken in version 1.2 [keul]

1.2.0 (2012-10-25)
------------------

- Added support for plone.app.imaging [cekk]

1.1.3 (2012-09-13)
------------------

* Smart Link uninstall was changing the Generic Setup baseline context.
  When we found it, we restore the "``profile-Products.CMFPlone:plone``"
  (part of issue `#1`__)
  [keul]
* when uninstalling, restore old ATLink automatically
  [keul]
* fixed many bad formatted portal messages visualization
  [keul]
* uninstall now remove the persisten utility (fix the other
  part of issue `#1`__)
  [keul]

__ https://github.com/RedTurtle/redturtle.smartlink/issues/1
__ https://github.com/RedTurtle/redturtle.smartlink/issues/1

1.1.2 (2012-05-23)
------------------

* fixed a bug on Plone 3 if plone.app.blob is not present [keul]

1.1.1 (2012-05-18)
------------------

* fixed tests for Plone 4.2 compatibility [keul]
* migrating "fake external links" now support the migration of URLs that
  explicitly use "*resolveuid*" (sometimes Plone users are really evil)
  [keul]

1.1.0 (2012-02-20)
------------------

* added a link to the view that migrate to blob from the control panel [keul]
* added a new ``Smart Link: access configuration`` permission for site configuration
  that "Site Administrator" role can handle [keul]
* added an utility to convert "fake external" link to internal [keul]
* aligned all ``Link.xml`` files to be Plone 4 compliant [keul]
* In Plone 4 the related items were duplicated (if used).
  Now Plone 3.3 requires `collective.relateditems`__ [keul]
* Moved URL transformation features to an ``ILinkNormalizerUtility`` [keul]
* fixed all tests to be compatible again with Plone 3.3.6 [keul]
* fixed bug when providing a non ASCII URL (close `#8`__) [keul]