@@ -1,8 +1,0 @@
-<?xml version="1.0"?>
-<import-steps>
- <import-step id="imaged-event" version="20090317-01"
-              handler="redturtle.smartlink.setuphandlers.setupVarious"
-              title="SmartLink - various import steps">
-     Various import steps
- </import-step>
-</import-steps>
