@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1003</version>
+  <version>1210</version>
   <dependencies>
     <!--dependency>profile-plone.app.imaging:default</dependency-->
   </dependencies>
