@@ -7,6 +7,9 @@ Changelog
 - Removed longly deprecated actionicons.xml [keul]
 - Modern inclusion of referencebrowserwidget [keul]
 - Restored tests on Plone 3.3 that were broken in version 1.2 [keul]
+- Removed old ununsed import step (close `#1`__) [keul]
+
+__ https://github.com/RedTurtle/redturtle.smartlink/issues/1
 
 1.2.0 (2012-10-25)
 ------------------
